objects/PropertyMaps__c.object
<CustomObject>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Floor</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Property Maps</relationshipLabel>
        <relationshipName>PropertyMaps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TechDMImportDateTime__c</fullName>
        <label>Tech_DMImportDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TechDMOriginalSourceSystem__c</fullName>
        <label>Tech_DMOriginalSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMReleaseNo__c</fullName>
        <label>Tech_DMReleaseNo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceID__c</fullName>
        <label>Tech_DMSourceID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceSystem__c</fullName>
        <label>Tech_DMSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMXREFId__c</fullName>
        <label>Tech_DMXREF_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URI__c</fullName>
        <label>URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Property Maps</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Floor__c</columns>
        <columns>Property__c</columns>
        <columns>Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Property Maps Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>